# bitbox-flutter

./: .gitignore  .metadata  LICENSE  Makefile  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle
lib/: bitbox_flutter.dart
lib/src/: bitbox_flutter_api.dart  bitbox_flutter_platform.dart  usb_coordinator.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.rs  lib.rs  usb_bridge.rs
